Modified index file

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,6 +13,10 @@
     <h3>Why choose SE</h3>
     <p>Software developers are the real deal</p>
     <p>Ideas are embedded in you.</p>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable image" />
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+      ><img
+        src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+        alt="Clickable image"
+    /></a>
   </body>
 </html>
