Modified index file

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,17 +6,15 @@
     <title>My first cool webpage</title>
   </head>
   <body>
-    <h1>Why Coding</h1>
-    <p>I love to code</p>
-    <h2>Can you pay the price</h2>
-    <p>I want to make a difference</p>
-    <h3>Why choose SE</h3>
-    <p>Software developers are the real deal</p>
-    <p>Ideas are embedded in you.</p>
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-      ><img
-        src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-        alt="Clickable image"
-    /></a>
+    <a href="index.html">
+      <h1>Why Coding</h1>
+      <p>I love to code</p>
+      <h2>Can you pay the price</h2>
+      <p>I want to make a difference</p>
+      <h3>Why choose SE</h3>
+      <p>Software developers are the real deal</p>
+      <p>Ideas are embedded in you.</p>
+    </a>
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable image" />
   </body>
 </html>
