--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My first cool webpage</title>
+    <a href="/html_basic/tweets.html">My tweets</a>
   </head>
   <body>
     <a href="index.html">
