--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My tweets</title>
+    <a href="/html_basic/index.html">Home page</a>
   </head>
   <body>
     <blockquote class="twitter-tweet">
