--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,15 +7,36 @@
     <a href="/html_basic/tweets.html">My tweets</a>
   </head>
   <body>
-    <a href="index.html">
-      <h1>Why Coding</h1>
-      <p>I love to code</p>
-      <h2>Can you pay the price</h2>
-      <p>I want to make a difference</p>
-      <h3>Why choose SE</h3>
-      <p>Software developers are the real deal</p>
-      <p>Ideas are embedded in you.</p>
-    </a>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable image" />
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </header>
+    <article>
+      <a href="index.html">
+        <h1>Why Coding</h1>
+        <p>I love to code</p>
+        <h2>Can you pay the price</h2>
+        <p>I want to make a difference</p>
+        <h3>Why choose SE</h3>
+        <p>Software developers are the real deal</p>
+        <p>Ideas are embedded in you.</p>
+      </a>
+      <img
+        src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+        alt="Clickable image"
+      />
+    </article>
+    <aside>
+      <p>contains a single paragraph, just reading for now</p>
+      <textarea placeholder="Write your comment here..."></textarea>
+    </aside>
+    <footer>
+      Made by Victor Nwachukwu -
+      <a href="https://x.com/VictorN68976941" target="_blank">here</a>
+    </footer>
   </body>
 </html>
