--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -15,33 +15,35 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
-    <article>
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">
+    <main>
+      <article>
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">
+            <a
+              href="https://twitter.com/hashtag/ALX?src=hash&amp;ref_src=twsrc%5Etfw"
+              >#ALX</a
+            >
+            is about to wildly trend 🙂‍↔️<br /><br />Can you see it yet?
+          </p>
+          &mdash; 𝐃𝐨𝐡𝐨𝐮 𝐃𝐚𝐧𝐢𝐞𝐥 𝐅𝐚𝐯𝐨𝐮𝐫 ™ (@DohouDaniel10)
           <a
-            href="https://twitter.com/hashtag/ALX?src=hash&amp;ref_src=twsrc%5Etfw"
-            >#ALX</a
+            href="https://twitter.com/DohouDaniel10/status/1929063060804665436?ref_src=twsrc%5Etfw"
+            >June 1, 2025</a
           >
-          is about to wildly trend 🙂‍↔️<br /><br />Can you see it yet?
-        </p>
-        &mdash; 𝐃𝐨𝐡𝐨𝐮 𝐃𝐚𝐧𝐢𝐞𝐥 𝐅𝐚𝐯𝐨𝐮𝐫 ™ (@DohouDaniel10)
-        <a
-          href="https://twitter.com/DohouDaniel10/status/1929063060804665436?ref_src=twsrc%5Etfw"
-          >June 1, 2025</a
-        >
-      </blockquote>
-    </article>
+        </blockquote>
+      </article>
+    </main>
     <script
       async
       src="https://platform.twitter.com/widgets.js"
       charset="utf-8"
     ></script>
-
-    <aside>
-      <p>contains a single paragraph, just reading for now</p>
-      <textarea placeholder="Write your comment here..."></textarea>
-    </aside>
-
+    <main>
+      <aside>
+        <p>contains a single paragraph, just reading for now</p>
+        <textarea placeholder="Write your comment here..."></textarea>
+      </aside>
+    </main>
     <footer>
       Made by Victor Nwachukwu -
       <a href="https://x.com/VictorN68976941" target="_blank">here</a>
