--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -10,33 +10,56 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="tweets.html">Tweets</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <a href="https://sites.google.com/view/nwachukwuvictor/home"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
+              >Portoflio</a
+            >
+          </li>
+          <li>
+            <a href="https://sites.google.com/view/nwachukwuvictor/about"
+              >About</a
+            >
+          </li>
+          <li>
+            <a href="https://sites.google.com/view/nwachukwuvictor/contact"
+              >Contact</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
     <main>
       <article>
-        <a href="index.html">
-          <h1>Why Coding</h1>
-          <p>I love to code</p>
-          <h2>Can you pay the price</h2>
-          <p>I want to make a difference</p>
-          <h3>Why choose SE</h3>
-          <p>Software developers are the real deal</p>
-          <p>Ideas are embedded in you.</p>
-        </a>
-        <img
-          src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-          alt="Clickable image"
-        />
+        <h1>Why Coding</h1>
+        <p>I love to code</p>
+        <h2>Can you pay the price</h2>
+        <p>I want to make a difference</p>
+        <h3>Why choose SE</h3>
+        <p>Software developers are the real deal</p>
+        <p>
+          Visit
+          <a href="https://savanna.alxafrica.com/projects/100581"> savanna</a>
+          to see my task for the week
+        </p>
       </article>
+
       <aside>
         <p>contains a single paragraph, just reading for now</p>
         <textarea placeholder="Write your comment here..."></textarea>
       </aside>
+
+      <figure>
+        <img
+          src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+          alt="Clickable image"
+        />
+        <figcaption>A Clickable image</figcaption>
+      </figure>
     </main>
     <footer>
       Made by Victor Nwachukwu -
