--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -8,15 +8,35 @@
   </head>
   <body>
     <header>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li>
+            <a href="https://sites.google.com/view/nwachukwuvictor/home"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
+              >Portoflio</a
+            >
+          </li>
+          <li>
+            <a href="https://sites.google.com/view/nwachukwuvictor/about"
+              >About</a
+            >
+          </li>
+          <li>
+            <a href="https://sites.google.com/view/nwachukwuvictor/contact"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
       <article>
+        <h1>The Title For My Tweets</h1>
+        <p>The paragragh in my webpage</p>
         <blockquote class="twitter-tweet">
           <p lang="en" dir="ltr">
             <a
@@ -31,19 +51,20 @@
             >June 1, 2025</a
           >
         </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+        <p>Go to <a href="index.html"> Homepage </a></p>
       </article>
-    </main>
-    <script
-      async
-      src="https://platform.twitter.com/widgets.js"
-      charset="utf-8"
-    ></script>
-    <main>
+
       <aside>
         <p>contains a single paragraph, just reading for now</p>
         <textarea placeholder="Write your comment here..."></textarea>
       </aside>
     </main>
+
     <footer>
       Made by Victor Nwachukwu -
       <a href="https://x.com/VictorN68976941" target="_blank">here</a>
