--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -46,6 +46,38 @@
           <a href="https://savanna.alxafrica.com/projects/100581"> savanna</a>
           to see my task for the week
         </p>
+
+        <table>
+          <thead>
+            <tr>
+              <th><strong>Name</strong></th>
+              <th><strong>Age</strong></th>
+              <th><strong>Country</strong></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>John</td>
+              <td>25</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Emily</td>
+              <td>28</td>
+              <td>Canada</td>
+            </tr>
+            <tr>
+              <td>Michael</td>
+              <td>32</td>
+              <td>Australia</td>
+            </tr>
+            <tr>
+              <td>Sophia</td>
+              <td>21</td>
+              <td>UK</td>
+            </tr>
+          </tbody>
+        </table>
       </article>
 
       <aside>
