--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Victor Nwachukwu - Personal Portfolio</title>
   </head>
@@ -12,10 +12,10 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#introduction">Introduction</a></li>
-        <li><a href="#projects">Project</a></li>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#introduction"></a>Introduction</li>
+        <li><a href="#projects"></a>Project</li>
+        <li><a href="#about"></a>About Me</li>
+        <li><a href="#contact"></a>Contact</li>
       </ul>
     </nav>
     <section id="introduction">
