--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My tweets</title>
     <a href="/html_basic/index.html">Home page</a>
@@ -11,24 +11,22 @@
       <nav>
         <ul>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/home"
-              >Home</a
-            >
+            <a href="https://sites.google.com/view/nwachukwuvictor/home"></a>
+            Home
           </li>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
-              >Portoflio</a
-            >
+            <a
+              href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
+            ></a>
+            Portoflio
           </li>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/about"
-              >About</a
-            >
+            <a href="https://sites.google.com/view/nwachukwuvictor/about"></a>
+            About
           </li>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/contact"
-              >Contact</a
-            >
+            <a href="https://sites.google.com/view/nwachukwuvictor/contact"></a>
+            Contact
           </li>
         </ul>
       </nav>
