modified index and tweets file

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,33 +4,35 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My first cool webpage</title>
-    <a href="/html_basic/tweets.html">My tweets</a>
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/home"></a
-            >Home
+            <a href="https://sites.google.com/view/nwachukwuvictor/home"
+              >Home</a
+            >
           </li>
           <li>
-            <a
-              href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
-            ></a>
-            Portoflio
+            <a href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
+              >Portoflio</a
+            >
           </li>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/about"></a>
-            About
+            <a href="https://sites.google.com/view/nwachukwuvictor/about"
+              >About</a
+            >
           </li>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/contact"></a>
-            Contact
+            <a href="https://sites.google.com/view/nwachukwuvictor/contact"
+              >Contact</a
+            >
           </li>
         </ul>
       </nav>
     </header>
+
     <main>
       <article>
         <h1>Why Coding</h1>
@@ -39,11 +41,12 @@
         <p>I want to make a difference</p>
         <h3>Why choose SE</h3>
         <p>Software developers are the real deal</p>
-        <p>
-          Visit
-          <a href="https://savanna.alxafrica.com/projects/100581"> savanna</a>
-          to see my task for the week
-        </p>
+        <p>I want to make a difference and change lives with tech skills.</p>
+
+        <a href="https://savanna.alxafrica.com/projects/100581">Savanna</a>
+
+        <h4>Tweets</h4>
+        <p><a href="tweets.html">Tweets</a></p>
 
         <table>
           <thead>
@@ -78,10 +81,7 @@
         </table>
       </article>
 
-      <aside>
-        <p>contains a single paragraph, just reading for now</p>
-        <textarea placeholder="Write your comment here..."></textarea>
-      </aside>
+      <aside>placeholder to add comment thread later.</aside>
 
       <figure>
         <img
@@ -91,6 +91,7 @@
         <figcaption>A Clickable image</figcaption>
       </figure>
     </main>
+
     <footer>
       Made by Victor Nwachukwu -
       <a href="https://x.com/VictorN68976941" target="_blank">here</a>
