--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,34 +3,36 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My tweets</title>
-    <a href="/html_basic/index.html">Home page</a>
+    <title>My First Portfolio</title>
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/home"></a>
-            Home
+            <a href="https://sites.google.com/view/nwachukwuvictor/home"
+              >Home</a
+            >
           </li>
           <li>
-            <a
-              href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
-            ></a>
-            Portoflio
+            <a href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
+              >Portoflio</a
+            >
           </li>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/about"></a>
-            About
+            <a href="https://sites.google.com/view/nwachukwuvictor/about"
+              >About</a
+            >
           </li>
           <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/contact"></a>
-            Contact
+            <a href="https://sites.google.com/view/nwachukwuvictor/contact"
+              >Contact</a
+            >
           </li>
         </ul>
       </nav>
     </header>
+
     <main>
       <article>
         <h1>The Title For My Tweets</h1>
@@ -54,13 +56,11 @@
           src="https://platform.twitter.com/widgets.js"
           charset="utf-8"
         ></script>
-        <p>Go to <a href="index.html"> Homepage </a></p>
+
+        <a href="index.html">Homepage</a>
       </article>
 
-      <aside>
-        <p>contains a single paragraph, just reading for now</p>
-        <textarea placeholder="Write your comment here..."></textarea>
-      </aside>
+      <aside>placeholder to add comment thread later.</aside>
     </main>
 
     <footer>
