--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,60 +7,62 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/home"
-              >Home</a
-            >
-          </li>
-          <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
-              >Portoflio</a
-            >
-          </li>
-          <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/about"
-              >About</a
-            >
-          </li>
-          <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/contact"
-              >Contact</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <ul>
+        <li>
+          <a href="base_index.html">Base index</a>
+        </li>
+        <li>
+          <a href="index.html">Homepage</a>
+        </li>
+        <li>
+          <a href="tweets.html">Tweets</a>
+        </li>
+      </ul>
     </header>
 
     <main>
       <article>
-        <h1>Why Coding</h1>
-        <p>I love to code</p>
-        <h2>Can you pay the price</h2>
-        <p>I want to make a difference</p>
-        <h3>Why choose SE</h3>
-        <p>Software developers are the real deal</p>
-        <p>I want to make a difference and change lives with tech skills.</p>
+        <h1>Title 1</h1>
+        <p>
+          ipsum, dolor sit amet consectetur adipisicing elit. Nulla, sint animi.
+          Eos quia iusto enim expedita, nemo dolore, similique ut qui autem
+          illum at culpa iure ipsa sapiente sequi quidem?
+        </p>
+        <h2>Title 2</h2>
+        <p>
+          ipsum, dolor sit amet consectetur adipisicing elit. Nulla, sint animi.
+          Eos quia iusto enim expedita, nemo dolore, similique ut qui autem
+          illum at culpa iure ipsa sapiente sequi quidem?
+        </p>
+        <h3>Title 3</h3>
+        <p>
+          ipsum, dolor sit amet consectetur adipisicing elit. Nulla, sint animi.
+          Eos quia iusto enim expedita, nemo dolore, similique ut qui autem
+          illum at culpa iure ipsa sapiente sequi quidem?
+        </p>
+        <p>
+          ipsum, dolor sit amet consectetur adipisicing elit. Nulla, sint animi.
+          Eos quia iusto enim expedita, nemo dolore, similique ut qui autem
+          illum at culpa iure ipsa sapiente sequi quidem?
+        </p>
 
-        <a href="https://savanna.alxafrica.com/projects/100581">Savanna</a>
+        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
 
         <h4>Tweets</h4>
         <p><a href="tweets.html">Tweets</a></p>
-
         <table>
           <thead>
             <tr>
-              <th><strong>Name</strong></th>
-              <th><strong>Age</strong></th>
-              <th><strong>Country</strong></th>
+              <th>Name</th>
+              <th>Age</th>
+              <th>Country</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>John</td>
               <td>25</td>
-              <td>USA</td>
+              <td>Usa</td>
             </tr>
             <tr>
               <td>Emily</td>
@@ -82,14 +84,6 @@
       </article>
 
       <aside>placeholder to add comment thread later.</aside>
-
-      <figure>
-        <img
-          src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-          alt="Clickable image"
-        />
-        <figcaption>A Clickable image</figcaption>
-      </figure>
     </main>
 
     <footer>
