--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,62 +6,32 @@
     <title>My First Portfolio</title>
   </head>
   <body>
+    
     <header>
-      <nav>
         <ul>
-          <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/home"
-              >Home</a
-            >
-          </li>
-          <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/my-portfolio"
-              >Portoflio</a
-            >
-          </li>
-          <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/about"
-              >About</a
-            >
-          </li>
-          <li>
-            <a href="https://sites.google.com/view/nwachukwuvictor/contact"
-              >Contact</a
-            >
-          </li>
+            <li>
+                <a href="base_index.html">Base index</a>
+            </li>
+            <li>
+                <a href="index.html">Homepage</a>
+            </li>
+            <li>
+                <a href="tweets.html">Tweets</a>
+            </li>
         </ul>
-      </nav>
     </header>
 
     <main>
-      <article>
-        <h1>The Title For My Tweets</h1>
+            <article>
+            <h1> The Title For Webpage </h1>
         <p>The paragragh in my webpage</p>
-        <blockquote class="twitter-tweet">
-          <p lang="en" dir="ltr">
-            <a
-              href="https://twitter.com/hashtag/ALX?src=hash&amp;ref_src=twsrc%5Etfw"
-              >#ALX</a
-            >
-            is about to wildly trend 🙂‍↔️<br /><br />Can you see it yet?
-          </p>
-          &mdash; 𝐃𝐨𝐡𝐨𝐮 𝐃𝐚𝐧𝐢𝐞𝐥 𝐅𝐚𝐯𝐨𝐮𝐫 ™ (@DohouDaniel10)
-          <a
-            href="https://twitter.com/DohouDaniel10/status/1929063060804665436?ref_src=twsrc%5Etfw"
-            >June 1, 2025</a
-          >
-        </blockquote>
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script>
-
-        <a href="index.html">Homepage</a>
-      </article>
-
-      <aside>placeholder to add comment thread later.</aside>
-    </main>
+        <p> Embeded post <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/ALX_AIDEV?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_AIDEV</a><br>Kind of a stretch, but I guess it does the job. <a href="https://twitter.com/kalibetre?ref_src=twsrc%5Etfw">@kalibetre</a> <a href="https://twitter.com/julienbarbier42?ref_src=twsrc%5Etfw">@julienbarbier42</a> this course is slowly becoming an eye opener 💡 <a href="https://t.co/Im3K41cpdB">pic.twitter.com/Im3K41cpdB</a></p>&mdash; Leykun 🇪🇹 (@Leyk_g) <a href="https://twitter.com/Leyk_g/status/1928396063909495041?ref_src=twsrc%5Etfw">May 30, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+        <P> Go to <a href="index.html"> Homepage </a></P>
+            </article>
+            <aside>
+                <p> placeholder to add comment thread later </p>
+             </aside>
+        </main>
 
     <footer>
       Made by Victor Nwachukwu -
