--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,15 +8,9 @@
   <body>
     <header>
       <ul>
-        <li>
-          <a href="base_index.html">Base index</a>
-        </li>
-        <li>
-          <a href="index.html">Homepage</a>
-        </li>
-        <li>
-          <a href="tweets.html">Tweets</a>
-        </li>
+        <li><a href="base_index.html">Base index</a></li>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
       </ul>
     </header>
 
