modified index and tweets file

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -79,10 +79,7 @@
 
       <aside>placeholder to add comment thread later.</aside>
     </main>
-
-    <footer>
-      Made by Victor Nwachukwu -
-      <a href="https://x.com/VictorN68976941" target="_blank">here</a>
-    </footer>
+    <!-- prettier-ignore -->
+    <footer>Made by Victor Nwachukwu - <a href="https://x.com/VictorN68976941" target="_blank">here</a></footer>
   </body>
 </html>
