--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -22,14 +22,9 @@
         <p> Embeded post <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/ALX_AIDEV?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_AIDEV</a><br>Kind of a stretch, but I guess it does the job. <a href="https://twitter.com/kalibetre?ref_src=twsrc%5Etfw">@kalibetre</a> <a href="https://twitter.com/julienbarbier42?ref_src=twsrc%5Etfw">@julienbarbier42</a> this course is slowly becoming an eye opener 💡 <a href="https://t.co/Im3K41cpdB">pic.twitter.com/Im3K41cpdB</a></p>&mdash; Leykun 🇪🇹 (@Leyk_g) <a href="https://twitter.com/Leyk_g/status/1928396063909495041?ref_src=twsrc%5Etfw">May 30, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
         <P> Go to <a href="index.html"> Homepage </a></P>
             </article>
-            <aside>
-                <p> placeholder to add comment thread later </p>
-             </aside>
+            <aside><p> placeholder to add comment thread later </p></aside>
         </main>
-
-    <footer>
-      Made by Victor Nwachukwu -
-      <a href="https://x.com/VictorN68976941" target="_blank">here</a>
-    </footer>
+<!-- prettier-ignore -->
+    <footer>Made by Victor Nwachukwu - <a href="https://x.com/VictorN68976941" target="_blank">here</a></footer>
   </body>
 </html>
